@startuml

title __GUI's Class Diagram__\n

  namespace com.eliten.eksamen {
    namespace gui {
      class com.eliten.eksamen.gui.CustomRenderer {
          + getTableCellRendererComponent()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace gui {
      class com.eliten.eksamen.gui.GenrePage {
          + GenrePage()
          - getLabel()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace gui {
      class com.eliten.eksamen.gui.LoginPage {
          + LoginPage()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace gui {
      class com.eliten.eksamen.gui.MasterFrame {
          + MasterFrame()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace gui {
      class com.eliten.eksamen.gui.MediaListPage {
          - columns : int
          - model : DefaultTableModel
          {static} - starImage : ImageIcon
          - table : JTable
          + MediaListPage()
          {static} + changeList()
          + update()
          - getLabelFromMouseEvent()
          - getPanelFromMouseEvent()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace gui {
      class com.eliten.eksamen.gui.MediaViewerPage {
          + MediaViewerPage()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace gui {
      class com.eliten.eksamen.gui.MyProfile {
          - bigInfoContainer : JPanel
          - label1 : JLabel
          - label2 : JLabel
          - mediaContainer : JPanel
          - myListLabel : JLabel
          - scrollPane : JScrollPane
          - singleContainer : JPanel
          - singleContainer2 : JPanel
          - textContainer : JLabel
          - textContainer2 : JLabel
          - valueContainer : JLabel
          - valueContainer2 : JLabel
          + MyProfile()
          + createVideoLabel()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace gui {
      class com.eliten.eksamen.gui.NavigationBar {
          {static} + BACKGROUND_COLOR : Color
          {static} + BUTTON_HOVER_COLOR : Color
          - genreSelector : JComboBox
          - searchField : JTextField
          + NavigationBar()
          + getGenreFromCategory()
          + getMediaType()
          + getSearchFieldText()
          + setMediaType()
          + sort()
          - getLabel()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace gui {
      class com.eliten.eksamen.gui.NavigationBarButton {
          {static} - icon : ImageIcon
          + NavigationBarButton()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace gui {
      class com.eliten.eksamen.gui.NavigationBarButtonUI {
          # paintButtonPressed()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace gui {
      class com.eliten.eksamen.gui.SelectUserPage {
          + SelectUserPage()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace gui {
      enum SortingStyle {
        ALPHABETICALLY
        DEFAULT
        NEWEST
        RATING
        name
      }
    }
  }
  

  com.eliten.eksamen.gui.CustomRenderer -up-|> javax.swing.table.DefaultTableCellRenderer
  com.eliten.eksamen.gui.GenrePage -up-|> javax.swing.JPanel
  com.eliten.eksamen.gui.LoginPage -up-|> javax.swing.JPanel
  com.eliten.eksamen.gui.MasterFrame -up-|> javax.swing.JFrame
  com.eliten.eksamen.gui.MediaListPage -up-|> javax.swing.JPanel
  com.eliten.eksamen.gui.MediaViewerPage -up-|> javax.swing.JPanel
  com.eliten.eksamen.gui.MyProfile -up-|> javax.swing.JPanel
  com.eliten.eksamen.gui.NavigationBar -up-|> javax.swing.JPanel
  com.eliten.eksamen.gui.NavigationBar o-- com.eliten.eksamen.gui.SortingStyle : currentSortingStyle
  com.eliten.eksamen.gui.NavigationBar o-- com.eliten.eksamen.media.MediaType : mediaType
  com.eliten.eksamen.gui.NavigationBar o-- com.eliten.eksamen.gui.SortingStyle : nextSortingStyle
  com.eliten.eksamen.gui.NavigationBarButton -up-|> javax.swing.JButton
  com.eliten.eksamen.gui.NavigationBarButtonUI -up-|> javax.swing.plaf.metal.MetalButtonUI
  com.eliten.eksamen.gui.SelectUserPage -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
